--- a/examples/deploy-java-with-maven-sonar-k8s.yml
+++ b/examples/deploy-java-with-maven-sonar-k8s.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - main
 
+      Test
+
 env:
   KUBECONFIG: ${{ secrets.KUBECONFIG }}
   SONAR_TOKEN: ${{ secrets.SONAR_TKN }}
