--- a/examples/deploy-java-with-maven-sonar-k8s.yml
+++ b/examples/deploy-java-with-maven-sonar-k8s.yml
@@ -10,6 +10,9 @@ env:
   KUBECONFIG: ${{ secrets.KUBECONFIG }}
   SONAR_TOKEN: ${{ secrets.SONAR_TKN }}
 
+
+Test 
+
 jobs:
   build:
     runs-on: ubuntu-latest
